chore: implemented ScalaFX version for M-Chips, faster now